tests/stage2/valid/if-else.c
int main(){
    int a = 0;
    if(a == 1)
        return 0;
    else
        return 1;
}
