tests/stage2/invalid/tenary_no_e1.c
int main(){
    int a = 1;
    a = a > 0 ? : 2;
    return a;
}
